# DisCODe

./: .cproject  .gitignore  .gitmodules  .project  Base_8hpp.html  Base_8hpp__dep__incl.md5  Base_8hpp__incl.map  Base_8hpp__incl.md5  CMakeLists.txt  Common_8hpp.html  Common_8hpp__dep__incl.md5  Common_8hpp__incl.map  Common_8hpp__incl.md5  Configurator_8cpp.html  Configurator_8cpp__dep__incl.md5  Configurator_8cpp__incl.map  Configurator_8cpp__incl.md5  Configurator_8hpp.html  Configurator_8hpp__dep__incl.md5  Configurator_8hpp__incl.map  Configurator_8hpp__incl.md5  ConnectionManager_8hpp.html  ConnectionManager_8hpp__incl.map  ConnectionManager_8hpp__incl.md5  Connection_8hpp.html  Connection_8hpp__dep__incl.map  Connection_8hpp__dep__incl.md5  Connection_8hpp__incl.map  Connection_8hpp__incl.md5  Core_8hpp.html  DataProcessor_8hpp.html  DataProcessor_8hpp__dep__incl.map  DataProcessor_8hpp__dep__incl.md5  DataProcessor_8hpp__incl.md5  DataSource_8hpp.html  DataSource_8hpp__dep__incl.md5  DataSource_8hpp__incl.md5  DataStreamInterface_8hpp.html  DataStreamInterface_8hpp__dep__incl.map  DataStreamInterface_8hpp__dep__incl.md5  (+340 more)
Base/: Base.hpp  CMakeLists.txt  Component.cpp  Component.hpp  Component_Aux.hpp  Connection.hpp  DataProcessor.hpp  DataSource.hpp  DataStream.hpp  DataStreamInterface.hpp  Event.hpp  EventHandler.hpp  Kernel.cpp  Kernel.hpp  Kernel_Aux.hpp  Makefile  Panel.hpp  Property.hpp  Props.cpp  Props.hpp  Singleton.hpp  State.hpp
Base/Policies/: DataStreamBuffer.hpp  Synchronization.hpp
Common/: CMakeLists.txt  Common.hpp  DisCODeException.hpp  FraDIAException.hpp  Logger.cpp  Logger.hpp  LoggerAux.cpp  LoggerAux.hpp  LoggerImpl.cpp  LoggerImpl.hpp  LoggerOutput.hpp  Makefile  PanelEmpty.hpp  Panel_Empty.cpp  Panel_Empty.hpp  ScopeLogger.cpp  ScopeLogger.hpp  SharedLibrary.hpp  SharedLibraryCommon.hpp  SharedLibraryInc.hpp  StringState.hpp  Thread.cpp  Thread.hpp  Thread_SystemSpecific.hpp  Timer.hpp  Utils.hpp
Core/: CMakeLists.txt  ComponentFactory.hpp  ComponentManager.hpp  Configurator.cpp  Configurator.hpp  Connection.hpp  ConnectionManager.hpp  Core.hpp  DataStream.hpp  DataStreamInterface.hpp  Executor.cpp  Executor.hpp  ExecutorManager.hpp  KernelFactory.hpp  KernelHeader.hpp  KernelManager.cpp  KernelManager.hpp  Makefile  Names_Aux.hpp  Subtask.cpp  Subtask.hpp  Task.cpp  Task.hpp  TaskFactory.cc  TaskFactory.h  main.cc  main.cpp
Processors/CvFilter2D/: CMakeLists.txt  CvFilter2D_Processor.cpp  CvFilter2D_Processor.hpp
Processors/CvThreshold/: CMakeLists.txt  CvThreshold_Processor.cpp  CvThreshold_Processor.hpp
Processors/ExecTimer/: CMakeLists.txt  ExecTimer.cpp
Processors/MS_Sign_LUT/: CMakeLists.txt  MS_Sign_LUT.cpp  MS_Sign_LUT.hpp
SDK/: CMakeLists.txt
SDK/Component/: create.bat  create.sh
Sinks/WindowOpenCV/: CMakeLists.txt  WindowOpenCV.cpp
Sources/CameraOpenCV/: CMakeLists.txt  CameraOpenCV.cpp  CameraOpenCV_Panel.hpp  CameraOpenCV_Source.cpp  CameraOpenCV_Source.hpp
Sources/CameraUniCap/: CMakeLists.txt  CameraUniCap_Source.cpp  CameraUniCap_Source.h  CameraUniCap_Source.hpp
Sources/CameraV4L/: CMakeLists.txt  CameraProps.cpp  CameraProps.hpp  CameraV4L_Source.cpp  CameraV4L_Source.hpp  PixelFormats.hpp  PrintV4L2.cpp  V4L.cpp  V4L.hpp  V4L2.cpp  V4L2.hpp  V4L_define.hpp  VL.cpp  VL.hpp  VL_Common.cpp  VL_Common.hpp
Sources/Keyboard/: CMakeLists.txt  Keyboard_Source.cpp  Keyboard_Source.hpp
Sources/SoundFile/: CMakeLists.txt  SoundFile_Source.cpp  SoundFile_Source.hpp
Tests/: CMakeLists.txt  FraDIA_Test.pro  Task_1.xml  ext_test_lib.cpp  ext_test_main.cpp  main.cpp  test_opencv.cpp
Tmp/: CMakeLists.txt  LoggerTest.cpp  OpenCVSpeed.cpp  PolicyTest.cpp  TestOpenCV.cpp  TestUnicap.cpp  TestV4L.cpp  config.xml  fileSearch.cpp  ptree.cpp
Tmp/CvBlobsLib/: Blob.cpp  Blob.h  BlobOperators.cpp  BlobResult.cpp  BlobResult.hpp  CMakeLists.txt  Doxyfile  example.txt
Types/: Blob.cpp  Blob.hpp  BlobContour.cpp  BlobContour.hpp  BlobOperators.cpp  BlobOperators.hpp  BlobResult.cpp  BlobResult.hpp  CMakeLists.txt  CvMatTranslator.hpp  Drawable.hpp  DrawableContainer.hpp  Drawable_types.hpp  Ellipse.hpp  Object3D.hpp  stream_OpenCV.hpp
Types/Blobs/: Blob.cpp  Blob.hpp  BlobContour.hpp  BlobOperators.cpp  BlobOperators.hpp  BlobResult.hpp
Types/Objects3D/: Chessboard.hpp  Object3D.hpp
doc/: CMakeLists.txt  DisCODe.Doxyfile  DisCODe.Doxyfile.in  convert_pages.py  footer.html  header.html  repl.sh  search.css  stylesheet.css
doc/didactics/: Didactics_ECOVI.dox  Didactics_EIASR.dox  camera_calibration_01_findchessboard.dox  camera_calibration_02_calibration.dox  camera_calibration_03_undistortion.dox
doc/installation/: gentoo_sdk.dox  installation.dox  linux_sdk.dox  system_requirements.dox  ubuntu.dox  ubuntu_sdk.dox  windows.dox  windows_sdk.dox
doc/manuals/: Manuals.dox  Manuals_components.dox  Manuals_datastreams.dox  Manuals_events.dox  Manuals_executors.dox  Manuals_properties.dox  Manuals_tasks.dox
doc/tutorials/: Tutorials.dox  beginner_camera_calibration_01_findchessboard.dox  beginner_camera_calibration_02_undistortion.dox  beginner_camera_calibration_tutorials.dox  beginner_discode_00_description.dox  beginner_discode_01_parameters.dox  beginner_discode_02_moviereader.dox  beginner_discode_03_moviereader_changeparameter.dox  beginner_discode_04_sequencereader.dox  beginner_discode_05_trigerred_sequencereader.dox  beginner_discode_06_refreshedtriggered_sequencereader.dox  beginner_discode_07_component_images_blurer.dox  beginner_discode_08_component_properties.dox  beginner_discode_09_utilities.dox  beginner_discode_tutorials.dox  beginner_feature_extraction.dox  (+27 more)
doc_src/: CMakeLists.txt  Credits.dox  DisCODe.Doxyfile  Download.dox  DoxygenLayout.xml  FAQ.dox  FraDIA.Doxyfile  Mainpage.dox  Manuals.dox  Tutorials.dox  footer.html  header.html  refman_pl.Doxyfile  search.css  search.js  stylesheet.css
share/: CMakeLists.txt  DisCODeMacros.cmake  task.xml
src/: CMakeLists.txt
src/Base/: Base.hpp  (+12 more)
tests/: CMakeLists.txt  CommandInterpreter_test.cpp  SimpleClient.cpp  SimpleServer.cpp  _SimpleClient.cpp
(+722 files in other folders)
